Fixing mobile spacing issue

--- a/src/assets/styles/App.css
+++ b/src/assets/styles/App.css
@@ -1,7 +1,6 @@
 #root {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
   text-align: center;
 }
 
@@ -60,7 +59,6 @@ input[type="number"] {
 .sudoku-cell {
   width: 2em;
   height: 2em;
-
   border: 1px solid #eee;
   padding: 3px;
   text-align: center;
@@ -85,11 +83,11 @@ input[type="number"] {
 }
 
 .sudoku-cell.right-margin {
-  margin-right: 5px; /* Adjust the gap size as needed */
+  margin-right: 2px; /* Adjust the gap size as needed */
 }
 
 .sudoku-cell.bottom-margin {
-  margin-bottom: 5px; /* Adjust the gap size as needed */
+  margin-bottom: 2px; /* Adjust the gap size as needed */
 }
 .sudoku-cell.editable-cell.active-cell {
   background: var(--primary-color);
